force-app/main/default/objects/Competitor_Capture__c/Competitor_Capture__c.object-meta.xml
<CustomObject>
    <label>Competitor Capture</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Competitor Capture Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Capture</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>