force-app/main/default/objects/Competitor_Capture__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account ID</description>
    <inlineHelpText>Customer account associated with the competitor capture</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitor Capture</relationshipLabel>
    <relationshipName>Competitor_Capture</relationshipName>
    <type>Lookup</type>
</CustomField>