force-app/main/default/objects/Competitor_Capture__c/fields/Account_WIN_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_WIN_ID__c</fullName>
    <formula>Account__r.WIN_ID__c</formula>
    <label>Account WIN ID</label>
    <type>Text</type>
</CustomField>