force-app/main/default/objects/Competitor_Capture__c/fields/Annual_UMO_Volume__c.field-meta.xml
<CustomField>
    <fullName>Annual_UMO_Volume__c</fullName>
    <description>Total volume for the year for this customer</description>
    <inlineHelpText>Total volume for the year for this customer</inlineHelpText>
    <label>Annual UMO Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>