force-app/main/default/objects/Competitor_Capture__c/fields/Attachment_Pricing_Validated__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Pricing_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>After an attachment is entered it needs to be validated by someone that is not an an Account Manager Sales person type</description>
    <inlineHelpText>After an attachment is entered it needs to be validated by someone that is not an an Account Manager Sales person type</inlineHelpText>
    <label>Attachment Pricing Validated</label>
    <type>Checkbox</type>
</CustomField>