force-app/main/default/objects/Competitor_Capture__c/fields/Attachment_Type__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Type__c</fullName>
    <description>Attachment on file</description>
    <inlineHelpText>Type of attachment you will attach to this entry. If no attachment, select none. Attach on the next screen after Save</inlineHelpText>
    <label>Attachment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Government Bid Tabulation</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Invoice &amp; Product Data Sheet</fullName>
            </value>
            <value>
                <fullName>Product Data Sheet</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Proposal &amp; Product Data Sheet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>