force-app/main/default/objects/Competitor_Capture__c/fields/Auto_Type__c.field-meta.xml
<CustomField>
    <fullName>Auto_Type__c</fullName>
    <description>Type of lube application</description>
    <inlineHelpText>Type of lube application</inlineHelpText>
    <label>Auto Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Anti-Freeze</fullName>
            </value>
            <value>
                <fullName>Base Oil – Group II</fullName>
            </value>
            <value>
                <fullName>Base Oil – Group II+</fullName>
            </value>
            <value>
                <fullName>Base Oil – Group III</fullName>
            </value>
            <value>
                <fullName>Fleet / Industrial</fullName>
                <isActive>false</isActive>
                <label>Fleet / Industrial</label>
            </value>
            <value>
                <fullName>Gear Oils</fullName>
            </value>
            <value>
                <fullName>Grease</fullName>
            </value>
            <value>
                <fullName>Heavy Duty Oil</fullName>
            </value>
            <value>
                <fullName>Industrial Fluid</fullName>
            </value>
            <value>
                <fullName>Passenger Car Engine Oil (PCEO)</fullName>
            </value>
            <value>
                <fullName>Transmission Oil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>