force-app/main/default/objects/Competitor_Capture__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Branch associated with the entry</description>
    <inlineHelpText>Branch associated with the entry</inlineHelpText>
    <label>Branch</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Branch</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitor Capture (Branch)</relationshipLabel>
    <relationshipName>Competitor_Capture2</relationshipName>
    <type>Lookup</type>
</CustomField>