force-app/main/default/objects/Competitor_Capture__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Sales channel which the lube oil was sold</description>
    <inlineHelpText>Sales channel which the lube oil was sold</inlineHelpText>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
            <value>
                <fullName>ILMA</fullName>
            </value>
            <value>
                <fullName>Jobber</fullName>
                <isActive>false</isActive>
                <label>Jobber</label>
            </value>
            <value>
                <fullName>Marketer</fullName>
                <isActive>false</isActive>
                <label>Marketer</label>
            </value>
            <value>
                <fullName>Military</fullName>
                <isActive>false</isActive>
                <label>Military</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>