force-app/main/default/objects/Competitor_Capture__c/fields/Charge_by_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Charge_by_Unit_of_Measure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Customer Receives Per Gal, Per L or Per Drum Pricing. DO NOT CHECK IF NOT APPLICABLE</description>
    <inlineHelpText>If Customer Receives Per Gal, Per L or Per Drum Pricing. DO NOT CHECK IF NOT APPLICABLE</inlineHelpText>
    <label>Charge by Unit of Measure</label>
    <type>Checkbox</type>
</CustomField>