force-app/main/default/objects/Competitor_Capture__c/fields/Charge_Monthly_Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>Charge_Monthly_Service_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Customer Receives Monthly Service Fee. DO NOT CHECK IF NOT APPLICABLE!!!</description>
    <inlineHelpText>If Customer Receives Monthly Service Fee. DO NOT CHECK IF NOT APPLICABLE!!!</inlineHelpText>
    <label>Charge a Monthly Service Fee</label>
    <type>Checkbox</type>
</CustomField>