force-app/main/default/objects/Competitor_Capture__c/fields/Charge_Stop_Fee__c.field-meta.xml
<CustomField>
    <fullName>Charge_Stop_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Customer Receives Stop Fee Pricing. DO NOT CHECK IF NOT APPLICABLE!!!</description>
    <inlineHelpText>If Customer Receives Stop Fee Pricing. DO NOT CHECK IF NOT APPLICABLE!!!</inlineHelpText>
    <label>Charge a Stop Fee</label>
    <type>Checkbox</type>
</CustomField>