force-app/main/default/objects/Competitor_Capture__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Additional comments; If Brand is *Other than Required here; If Competitor is  *OTHER than Required here</description>
    <inlineHelpText>Additional comments; If Brand is *Other than Required here; If Competitor is  *OTHER than Required here</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>