force-app/main/default/objects/Competitor_Capture__c/fields/Comp_WIN_ID__c.field-meta.xml
<CustomField>
    <fullName>Comp_WIN_ID__c</fullName>
    <formula>Competitor_Account__r.WIN_ID__c</formula>
    <label>Comp WIN ID</label>
    <type>Text</type>
</CustomField>