force-app/main/default/objects/Competitor_Capture__c/fields/Competitor_Account__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Competitor associated with entry. If Competitor not in SF - create new competitor OR use ** OTHER MISC COMPETITOR ** &amp; list competitor &amp; address in comments section</description>
    <inlineHelpText>Competitor associated with entry. If Competitor not in SF - create new competitor OR use ** OTHER MISC COMPETITOR ** &amp; list competitor &amp; address in comments section</inlineHelpText>
    <label>Competitor Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Competitor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitor Capture (Competitor Account)</relationshipLabel>
    <relationshipName>Competitor_Capture1</relationshipName>
    <type>Lookup</type>
</CustomField>