force-app/main/default/objects/Competitor_Capture__c/fields/Competitor_AccountNew__c.field-meta.xml
<CustomField>
    <fullName>Competitor_AccountNew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>zCompetitor Account</label>
    <referenceTo>Competitor_Account__c</referenceTo>
    <relationshipLabel>Competitor Capture</relationshipLabel>
    <relationshipName>Competitor_Capture</relationshipName>
    <type>Lookup</type>
</CustomField>