force-app/main/default/objects/Competitor_Capture__c/fields/Competitor_Brand__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Brand__c</fullName>
    <description>Brand customer is purchasing. If not listed select * Other - Brand Not Listed &amp; include in comments</description>
    <inlineHelpText>Brand customer is purchasing. If not listed select * Other - Brand Not Listed &amp; include in comments</inlineHelpText>
    <label>Competitor Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>*OTHER - Brand Not Listed</fullName>
            </value>
            <value>
                <fullName>76</fullName>
            </value>
            <value>
                <fullName>77 Lubricants</fullName>
            </value>
            <value>
                <fullName>9 Circle International</fullName>
            </value>
            <value>
                <fullName>Amalie</fullName>
            </value>
            <value>
                <fullName>Amsoil</fullName>
            </value>
            <value>
                <fullName>Ardeca</fullName>
            </value>
            <value>
                <fullName>Avista</fullName>
            </value>
            <value>
                <fullName>Bel Ray</fullName>
            </value>
            <value>
                <fullName>BEX International</fullName>
            </value>
            <value>
                <fullName>BG Products</fullName>
            </value>
            <value>
                <fullName>Brad Penn</fullName>
            </value>
            <value>
                <fullName>Calumet</fullName>
            </value>
            <value>
                <fullName>Cam2</fullName>
            </value>
            <value>
                <fullName>Castrol</fullName>
            </value>
            <value>
                <fullName>Chevron</fullName>
            </value>
            <value>
                <fullName>Chicago Petroleum</fullName>
            </value>
            <value>
                <fullName>Citgo</fullName>
            </value>
            <value>
                <fullName>Conoco</fullName>
            </value>
            <value>
                <fullName>Eco-Power</fullName>
            </value>
            <value>
                <fullName>ENEOS</fullName>
            </value>
            <value>
                <fullName>Excel Paralubes</fullName>
            </value>
            <value>
                <fullName>Factory Motor Parts</fullName>
            </value>
            <value>
                <fullName>Family Of Brands</fullName>
            </value>
            <value>
                <fullName>Ford Motorcraft</fullName>
            </value>
            <value>
                <fullName>Gulf</fullName>
            </value>
            <value>
                <fullName>Havoline</fullName>
            </value>
            <value>
                <fullName>Heritage-Crystal Cleen</fullName>
            </value>
            <value>
                <fullName>Holly Frontier</fullName>
            </value>
            <value>
                <fullName>Houghton</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>