force-app/main/default/objects/Competitor_Capture__c/fields/Competitor_Capture_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Capture_ID_18__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competitor Capture ID 18</label>
    <type>Text</type>
</CustomField>