force-app/main/default/objects/Competitor_Capture__c/fields/CreatedBy_Username__c.field-meta.xml
<CustomField>
    <fullName>CreatedBy_Username__c</fullName>
    <label>Created by Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>