force-app/main/default/objects/Competitor_Capture__c/fields/Did_Safety_Kleen_lose_this_customer__c.field-meta.xml
<CustomField>
    <fullName>Did_Safety_Kleen_lose_this_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this account was previously being serviced by Safety-Kleen and has now switched to this competitor, click this check box to indicate this Competitor Capture offer led to a UMO loss for Safety-Kleen. If it did not lead to a Safety-Kleen loss, leave unchecked.</inlineHelpText>
    <label>Did Safety-Kleen lose this customer?</label>
    <type>Checkbox</type>
</CustomField>