force-app/main/default/objects/Competitor_Capture__c/fields/Equipment_Options__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Options__c</fullName>
    <description>If the customer has Purchased, Leased to Own or Loaned any equipment</description>
    <inlineHelpText>If the customer has Purchased, Leased to Own or Loaned any equipment</inlineHelpText>
    <label>Equipment Options</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Packaging__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Lease to Own</fullName>
            </value>
            <value>
                <fullName>Equipment Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>