force-app/main/default/objects/Competitor_Capture__c/fields/Invalid_Entry__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invalid Entry</label>
    <type>Checkbox</type>
</CustomField>