force-app/main/default/objects/Competitor_Capture__c/fields/Invoice_or_Proposal_date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_or_Proposal_date__c</fullName>
    <description>Date on the invoice or proposal. Required if invoice or proposal selected in Attachment Type</description>
    <inlineHelpText>Date on the invoice or proposal. Required if invoice or proposal selected in Attachment Type</inlineHelpText>
    <label>Invoice or Proposal date</label>
    <type>Date</type>
</CustomField>