force-app/main/default/objects/Competitor_Capture__c/fields/Monthly_Service_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Service_Fee_Amount__c</fullName>
    <description>Price for Monthly Service Fee</description>
    <inlineHelpText>Price for Monthly Service Fee</inlineHelpText>
    <label>Monthly Service Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>