force-app/main/default/objects/Competitor_Capture__c/fields/Number_of_Units__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Units__c</fullName>
    <description>Units being sold</description>
    <inlineHelpText>Units being sold</inlineHelpText>
    <label># of Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>