force-app/main/default/objects/Competitor_Capture__c/fields/Oil_Filter_Price__c.field-meta.xml
<CustomField>
    <fullName>Oil_Filter_Price__c</fullName>
    <label>Oil Filter Price Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bin</fullName>
            </value>
            <value>
                <fullName>Drum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>