force-app/main/default/objects/Competitor_Capture__c/fields/Oil_Filter_Prices__c.field-meta.xml
<CustomField>
    <fullName>Oil_Filter_Prices__c</fullName>
    <label>Oil Filter Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>