force-app/main/default/objects/Competitor_Capture__c/fields/Pay_or_Charge__c.field-meta.xml
<CustomField>
    <fullName>Pay_or_Charge__c</fullName>
    <description>If customer is Pay, Charge or No Charge for UMO</description>
    <inlineHelpText>If customer is Pay, Charge or No Charge for UMO</inlineHelpText>
    <label>Price Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PFO</fullName>
            </value>
            <value>
                <fullName>CFO</fullName>
            </value>
            <value>
                <fullName>No Charge</fullName>
            </value>
            <value>
                <fullName>Charge</fullName>
                <isActive>false</isActive>
                <label>Charge</label>
            </value>
            <value>
                <fullName>Pay</fullName>
                <isActive>false</isActive>
                <label>Pay</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>