force-app/main/default/objects/Competitor_Capture__c/fields/Price_per_UOM__c.field-meta.xml
<CustomField>
    <fullName>Price_per_UOM__c</fullName>
    <description>Price per the UoM</description>
    <inlineHelpText>Price per the UoM</inlineHelpText>
    <label>Price per Unit of Measure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>