force-app/main/default/objects/Competitor_Capture__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <label>Product Description</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Auto_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0W-20 Full Synthetic</fullName>
            </value>
            <value>
                <fullName>0W-20 Full Synthetic dexos1 SN/GF-5</fullName>
            </value>
            <value>
                <fullName>0W-20 Full Synthetic dexos1 SN/GF-5 GEN 2</fullName>
            </value>
            <value>
                <fullName>0W-20 High Mileage</fullName>
            </value>
            <value>
                <fullName>0W-40 Full Synthetic</fullName>
            </value>
            <value>
                <fullName>100/120</fullName>
            </value>
            <value>
                <fullName>10W30 CJ-4/SN</fullName>
            </value>
            <value>
                <fullName>10W30 CK-4</fullName>
            </value>
            <value>
                <fullName>10W-30 Conventional</fullName>
            </value>
            <value>
                <fullName>10W-30 High Mileage</fullName>
            </value>
            <value>
                <fullName>10W-30 Synthetic Blend SN/GF-5</fullName>
            </value>
            <value>
                <fullName>10W-40 Synthetic Blend</fullName>
            </value>
            <value>
                <fullName>10W-50 Full Synthetic</fullName>
            </value>
            <value>
                <fullName>10W-60 Full Synthetic</fullName>
            </value>
            <value>
                <fullName>15W40 CJ-4/SN</fullName>
            </value>
            <value>
                <fullName>15W40 CK-4/SN</fullName>
            </value>
            <value>
                <fullName>15W-40 Natural Gas</fullName>
            </value>
            <value>
                <fullName>200/240</fullName>
            </value>
            <value>
                <fullName>20W-50 Synthetic Blend</fullName>
            </value>
            <value>
                <fullName>32 Hydraulic Oil</fullName>
            </value>
            <value>
                <fullName>46 Hydraulic Oil</fullName>
            </value>
            <value>
                <fullName>4 cSt</fullName>
            </value>
            <value>
                <fullName>5W-20 Conventional</fullName>
            </value>
            <value>
                <fullName>5W-20 Full Synthetic</fullName>
            </value>
            <value>
                <fullName>5W-20 Full Synthetic dexos 1 SN/GF-5</fullName>
            </value>
            <value>
                <fullName>5W-20 Full Synthetic dexos1 SN/GF-5 GEN 2</fullName>
            </value>
            <value>
                <fullName>5W-20 High Mileage</fullName>
            </value>
            <value>
                <fullName>5W-20 Synthetic Blend SN/GF-5</fullName>
            </value>
            <value>
                <fullName>5W-30 Conventional</fullName>
            </value>
            <value>
                <fullName>5W-30 Full Synthetic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>