force-app/main/default/objects/Competitor_Capture__c/fields/Product_Packaging__c.field-meta.xml
<CustomField>
    <fullName>Product_Packaging__c</fullName>
    <description>Packaging customer is purchasing</description>
    <inlineHelpText>Packaging customer is purchasing</inlineHelpText>
    <label>Product Packaging</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Drum</fullName>
            </value>
            <value>
                <fullName>Pail</fullName>
            </value>
            <value>
                <fullName>Keg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>