force-app/main/default/objects/Competitor_Capture__c/fields/Stop_Fee__c.field-meta.xml
<CustomField>
    <fullName>Stop_Fee__c</fullName>
    <description>Price for Stop Fee</description>
    <inlineHelpText>Price for Stop Fee</inlineHelpText>
    <label>Stop Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>