force-app/main/default/objects/Competitor_Capture__c/fields/Storage_Type__c.field-meta.xml
<CustomField>
    <fullName>Storage_Type__c</fullName>
    <description>Storage Type customer is using</description>
    <inlineHelpText>Storage Type customer is using</inlineHelpText>
    <label>Storage Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Packaging__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tote</fullName>
            </value>
            <value>
                <fullName>Tote &amp; Pump</fullName>
            </value>
            <value>
                <fullName>Tank</fullName>
            </value>
            <value>
                <fullName>Tank &amp; Pump</fullName>
            </value>
            <value>
                <fullName>Pump</fullName>
            </value>
            <value>
                <fullName>4x5 Quart</fullName>
            </value>
            <value>
                <fullName>12X1 Quart</fullName>
            </value>
            <value>
                <fullName>Customer Owned Tanks</fullName>
            </value>
            <value>
                <fullName>55 Gallon Drum</fullName>
            </value>
            <value>
                <fullName>10x1 Tube</fullName>
            </value>
            <value>
                <fullName>5 Gallon</fullName>
            </value>
            <value>
                <fullName>16 Gallon</fullName>
            </value>
            <value>
                <fullName>35 Gallon</fullName>
            </value>
            <value>
                <fullName>4x1G</fullName>
            </value>
            <value>
                <fullName>6x1 Quart</fullName>
            </value>
            <value>
                <fullName>2X2.5G</fullName>
            </value>
            <value>
                <fullName>Bag in Box 6G</fullName>
            </value>
            <value>
                <fullName>Bag in Box 5G</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>