force-app/main/default/objects/Competitor_Capture__c/fields/Storage_Type_Size__c.field-meta.xml
<CustomField>
    <fullName>Storage_Type_Size__c</fullName>
    <description>Storage Size customer has; not exact just pick closest</description>
    <inlineHelpText>Storage Size customer has; not exact just pick closest</inlineHelpText>
    <label>Storage Size</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Storage_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tote 102 (Canadian)</fullName>
            </value>
            <value>
                <fullName>Tote 330 (US)</fullName>
            </value>
            <value>
                <fullName>275 Gallon Bulk Tank</fullName>
            </value>
            <value>
                <fullName>500 Gallon Bulk Tank</fullName>
            </value>
            <value>
                <fullName>501 + Gallons</fullName>
            </value>
            <value>
                <fullName>55 Gallon Cube</fullName>
            </value>
            <value>
                <fullName>110 Gallon Cube</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>