force-app/main/default/objects/Competitor_Capture__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <description>UoM of the price</description>
    <inlineHelpText>UoM of the price</inlineHelpText>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Packaging__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Drum</fullName>
            </value>
            <value>
                <fullName>Gallons</fullName>
            </value>
            <value>
                <fullName>Liters</fullName>
            </value>
            <value>
                <fullName>Quarts</fullName>
            </value>
            <value>
                <fullName>Pail</fullName>
            </value>
            <value>
                <fullName>Keg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>