force-app/main/default/objects/Competitor_Capture__c/fields/Waste_AF_Price_per_Gallon__c.field-meta.xml
<CustomField>
    <fullName>Waste_AF_Price_per_Gallon__c</fullName>
    <label>Waste AF Price per Gallon</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>