force-app/main/default/objects/Competitor_Capture__c/recordTypes/Competitor_Capture_Lube.recordType-meta.xml
<RecordType>
    <fullName>Competitor_Capture_Lube</fullName>
    <active>true</active>
    <description>Capture competitor pricing that deals with Lube Oil.</description>
    <label>Competitor Capture Lube</label>
</RecordType>