force-app/main/default/objects/Competitor_Capture__c/recordTypes/Competitor_Capture_RFO.recordType-meta.xml
<RecordType>
    <fullName>Competitor_Capture_RFO</fullName>
    <active>true</active>
    <label>Competitor Capture RFO</label>
</RecordType>