force-app/main/default/objects/Competitor_Capture__c/recordTypes/Competitor_Capture_UMO.recordType-meta.xml
<RecordType>
    <fullName>Competitor_Capture_UMO</fullName>
    <active>true</active>
    <description>Capture competitor pricing that deals with Used Motor Oil.</description>
    <label>Competitor Capture UMO</label>
</RecordType>