force-app/main/default/objects/Competitor_Capture__c/validationRules/Brand_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Brand_Other</fullName>
    <active>true</active>
    <description>Comment required when *Other brand not listed</description>
    <errorConditionFormula>and(left(text(Competitor_Brand__c) ,1) = &quot;*&quot;,  isblank(Comments__c))</errorConditionFormula>
    <errorDisplayField>Competitor_Brand__c</errorDisplayField>
    <errorMessage>Brands with * require comment</errorMessage>
</ValidationRule>