force-app/main/default/objects/Competitor_Capture__c/validationRules/Restrict_Negative_Values.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Negative_Values</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
NOT($Profile.Name = &quot;Integration&quot;),
NOT ($Profile.Name = &quot;Salesforce API Only System Integrations&quot;),
Price_per_UOM__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>Price_per_UOM__c</errorDisplayField>
    <errorMessage>No negative values. If entering a PFO rate, select “PFO” under the Price Type field and then enter the PFO rate as a positive value here</errorMessage>
</ValidationRule>